# Visa-me-ajuda

./: .gitignore  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
apps/: urls.py
apps/forum/: admin.py  urls.py
apps/forum/api_views/: __init__.py  pergunta.py  resposta.py  topico.py
apps/forum/migrations/: 0001_initial.py  0002_alter_topico_local.py  0003_alter_topico_dt_criacao.py  0004_alter_pergunta_dt_criacao.py  0005_pergunta_usuario_alter_resposta_dt_criacao.py
apps/forum/models/: pergunta.py  resposta.py  topico.py
apps/forum/serializers/: __init__.py  pergunta.py  resposta.py  topico.py
apps/mapa/: admin.py  apps.py  urls.py
apps/mapa/api_views/: __init__.py  mapa.py  perguntas_e_respostas.py
apps/mapa/migrations/: 0001_initial.py  0002_passo_ordem.py  0003_alter_passo_unique_together.py  0004_alter_perguntaeresposta_resposta.py  0005_link_trilha_mapa_iamgem_mapa_trilha_passo_links.py  0006_rename_iamgem_mapa_imagem_passo_imagem_trilha_imagem.py  0007_mapa_ordem_alter_passo_links_and_more.py  0008_alter_link_imagem.py
apps/mapa/models/: mapa.py  perguntas_e_respostas.py
apps/mapa/serializers/: mapa.py  perguntas_e_respostas.py
config/: settings.py  urls.py
